--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
     "prettier": "^3.0.0",
+    "sweetalert": "^2.1.2",
     "vite": "^4.4.9"
   }
 }
